# floodlight-gui

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  floodlight-gui.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: loading-data.md  models-and-export.md  navigation.md  registry-reference.md  transforms.md  visualization.md
src/floodlight_gui/: __init__.py  __main__.py  app.py  status_bar.py  theme.py
src/floodlight_gui/core/: __init__.py  data_store.py  event_bus.py  optional_features.py  periods.py  player_mapping.py  xy_access.py
src/floodlight_gui/core/help/: __init__.py  docstring_parser.py  resolve.py
src/floodlight_gui/engine/: __init__.py  apply_transforms.py  calculate_metric.py  fit_model.py  load_data.py
src/floodlight_gui/registry/: __init__.py  _validators.py  io.py  metrics.py  models.py  transforms.py
src/floodlight_gui/rendering/: __init__.py  coordinate_mapper.py  export_renderer.py  pitch_renderer.py  player_renderer.py  voronoi_colors.py
src/floodlight_gui/rendering/adapters/: __init__.py  hull.py  voronoi.py
src/floodlight_gui/rendering/export_overlays/: __init__.py  hull.py  voronoi.py
src/floodlight_gui/tabs/_shared/: __init__.py  array_view.py  broadcast.py  descriptor_widgets.py  error_helpers.py  export_action.py  help_popup.py  model_export.py  results_panel.py  selectors.py  state_views.py  tab_bar.py  tab_header.py
src/floodlight_gui/tabs/inspect/: __init__.py  collect.py  controls.py  leaves.py  render.py  sections.py  state.py
src/floodlight_gui/tabs/load/: __init__.py  dataset_section.py  dataset_worker.py  file_section.py  pitch_section.py  section_helpers.py
src/floodlight_gui/tabs/metrics/: __init__.py  controls.py  execute.py  params.py  results.py  select.py  state.py
src/floodlight_gui/tabs/model/: __init__.py  controls.py  execute.py  labels.py  params.py  results.py  select.py  state.py
src/floodlight_gui/tabs/transforms/: __init__.py  controls.py  (+5 more)
tests/: _dpg_stub.py  conftest.py  test_app.py  test_public_api.py  test_status_bar.py
tests/core/: test_data_store.py  test_event_bus.py  test_optional_features.py  test_periods.py  test_player_mapping.py  test_xy_access.py
tests/core/help/: test_docstring_parser.py  test_resolve.py
tests/engine/: test_apply_transforms.py  test_calculate_metric.py  test_fit_model.py  test_load_data.py
tests/packaging/: test_packaging.py
tests/registry/: test_descriptor_drift.py  test_format_stack_value.py  test_partition.py  test_register.py  test_validators.py
tests/rendering/: test_coordinate_mapper.py  test_layer_tags.py  test_overlay_dispatch.py  test_pattern_b_audit.py  test_player_renderer.py  test_render_video_overlays.py  test_voronoi_colors.py
tests/rendering/adapters/: test_hull_adapter.py  test_voronoi_adapter.py
tests/rendering/export_overlays/: test_plotters.py  test_registry.py  test_render_frame_overlays.py  test_spec_builder.py
tests/tabs/_shared/: test_array_view.py  test_broadcast.py  test_descriptor_widgets.py  test_error_helpers.py  test_export_action.py  test_model_export.py  test_results_panel.py  test_tab_bar.py
tests/tabs/inspect/: conftest.py  test_collect.py  test_leaves.py
tests/tabs/load/: conftest.py  test_dataset_section.py  test_dataset_worker.py  test_file_section.py  test_pitch_section.py  test_section_helpers.py
tests/tabs/metrics/: test_controls.py  test_execute.py  test_params.py  test_results.py  test_select.py
tests/tabs/model/: conftest.py  test_execute.py  test_params.py  test_results.py  test_select.py
tests/tabs/transforms/: conftest.py  test_controls.py  test_execute.py  test_params.py  test_select.py
tests/tabs/visualization/: test_export_writers.py  test_keyboard.py  test_mouse_handlers.py  test_overlay_dispatch.py  test_playback.py  test_playback_clock.py  test_timeline.py
(+12 files in other folders)
